--- a/PuzzlePublisher.sketchplugin/Contents/Sketch/resources/viewer.css
+++ b/PuzzlePublisher.sketchplugin/Contents/Sketch/resources/viewer.css
@@ -23,6 +23,13 @@
     pointer-events: auto;
 }
 
+.linkHoverDiv {
+    position: absolute;
+    opacity: 0;    
+    cursor: pointer;
+    pointer-events: auto;
+}
+
 .linkDivHighlight:hover {
     opacity: 0.2;
     transition: opacity 0.5s;
