Fixed close button in gallery

--- a/PuzzlePublisher.sketchplugin/Contents/Sketch/resources/viewer.css
+++ b/PuzzlePublisher.sketchplugin/Contents/Sketch/resources/viewer.css
@@ -251,7 +251,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    width: 48px;
+    min-width: 48px;
     height: 48px;
     margin-right: -16px;
     cursor: pointer;
