--- a/PuzzlePublisher.sketchplugin/Contents/Sketch/resources/viewer.css
+++ b/PuzzlePublisher.sketchplugin/Contents/Sketch/resources/viewer.css
@@ -1,3 +1,6 @@
+@import "https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.2/animate.css";
+/* Documentation https://github.com/daneden/animate.css */
+
 .image_div {
     margin: 0 auto;
 }
@@ -363,7 +366,8 @@ a:focus {
 }
 
 .hidden {
-    display: none !important;
+    visibility: hidden;
+    opacity: 0;
 }
 
 .hotspots-off {
