--- a/PuzzlePublisher.sketchplugin/Contents/Sketch/resources/viewer.css
+++ b/PuzzlePublisher.sketchplugin/Contents/Sketch/resources/viewer.css
@@ -1,5 +1,4 @@
-@import "https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.2/animate.css";
-/* Documentation https://github.com/daneden/animate.css */
+/*@import "https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.2/animate.css";*/
 
 .image_div {
     margin: 0 auto;
