--- a/PuzzlePublisher.sketchplugin/Contents/Sketch/resources/viewer.css
+++ b/PuzzlePublisher.sketchplugin/Contents/Sketch/resources/viewer.css
@@ -3,7 +3,6 @@
 .image_div {
     margin: 0 auto;
      position: absolute;
-     /*z-index:0;*/
 }
 
 .image_div img {
@@ -145,6 +144,10 @@
 
 .contentModal>div {
     pointer-events: auto;
+}
+
+.contentModal .image_div {
+    z-index:50;
 }
 
 #content-shadow.shadow {
