Added styles for Download link

--- a/PuzzlePublisher.sketchplugin/Contents/Sketch/resources/viewer.css
+++ b/PuzzlePublisher.sketchplugin/Contents/Sketch/resources/viewer.css
@@ -256,6 +256,10 @@ select:focus{
   line-height: 18px;
 }
 
+.svlink{
+    color: var(--color-accent);
+}
+
 #symbol_viewer_content .icon{
     font-family: "Font Awesome";
     font-size: 60px;
