Tuning Element Inspector styles

--- a/PuzzlePublisher.sketchplugin/Contents/Sketch/resources/viewer.css
+++ b/PuzzlePublisher.sketchplugin/Contents/Sketch/resources/viewer.css
@@ -211,7 +211,8 @@ select:focus{
   display: flex;
   align-items: center;
   position: fixed;
-  width: 260px;
+  box-sizing:border-box;
+  width: 400px;
   padding: 0 20px;
   background: var(--color-background);
   font-weight: var(--font-weight-bold);
