--- a/PuzzlePublisher.sketchplugin/Contents/Sketch/resources/viewer.css
+++ b/PuzzlePublisher.sketchplugin/Contents/Sketch/resources/viewer.css
@@ -178,6 +178,10 @@ select:focus{
   cursor: pointer;
 }
 
+#gallery-modal .checkbox-container label {
+  background-color: rgba(255,255,255,.12);
+}
+
 .checkbox-container label::after {
 	content: ' ';
   background-color: rgb(255, 255, 255);
@@ -210,6 +214,10 @@ select:focus{
 }
 
 .checkbox-container input:checked + label {
+	background-color: var(--color-accent);
+}
+
+#gallery-modal .checkbox-container input:checked + label {
 	background-color: var(--color-accent);
 }
 
@@ -433,6 +441,7 @@ text-overflow: ellipsis;
   height: 56px;
   display: flex;
   justify-content: center;
+  color: white;
   background-color: var(--color-background-gallery-90);
   z-index: 103;
 }
