Fixed modal poisitioning on 4k displays

--- a/PuzzlePublisher.sketchplugin/Contents/Sketch/resources/viewer.css
+++ b/PuzzlePublisher.sketchplugin/Contents/Sketch/resources/viewer.css
@@ -344,7 +344,7 @@ select:focus{
 
 .contentModal {
   z-index: 50;
-  /*position: fixed;*/
+  position: fixed;
   margin: auto;
   max-height: 100%;
   align-items: center;
